--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -6,33 +6,41 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 1: Centrar el texto en un span */
 
 /* Arrancaremos este ejercicio por vos: */
-#ejercicioUno {
-
+#ejercicioUno {display: block;
+          text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos{display: none;}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
-
-
+#ejercicioTres{display: flex; 
+position: relative ;
+left: 200px;
+margin-top: 100px;}
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+#ejercicioCuatro{position: fixed;
 
-
-
+top:0%;
+left:0%}
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
-
+#ejercicioCinco{display: flexbox;
+flex-direction: row-reverse;
+ justify-content: center;
+align-self: 8px;
+align-items: center;}
 
 /* Ejercicio 6. */
+#ejercicioSiete{display: flex;
+flex-direction: column-reverse;
+align-items:center ;}
